Updated README. Added init dir with solarized term color schemes.
As of the time of this commit, the TERM value in the .terminal files
needs to be adjusted from xterm-256color to xterm-color and then
the color schemes can be installed and set as defaults manually.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "init/solarized"]
+	path = init/solarized
+	url = https://github.com/tomislav/osx-lion-terminal.app-colors-solarized.git
