--- a/.gitconfig
+++ b/.gitconfig
@@ -72,3 +72,6 @@
 	pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
 	insteadOf = "gist:"
+[user]
+	name = Mike Larsson
+	email = mikelarssonftw@gmail.com
